// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useBreakPoint > should return max breakpoints 1`] = `
{
  "is2Xl": false,
  "isLg": false,
  "isMd": false,
  "isSm": false,
  "isXl": false,
  "isXs": false,
}
`;

exports[`useBreakPoint > should return min and max breakpoints 1`] = `
{
  "max": {
    "is2Xl": false,
    "isLg": false,
    "isMd": false,
    "isSm": false,
    "isXl": false,
    "isXs": false,
  },
  "min": {
    "is2Xl": false,
    "isLg": false,
    "isMd": false,
    "isSm": false,
    "isXl": false,
    "isXs": false,
  },
}
`;

exports[`useBreakPoint > should return min breakpoints 1`] = `
{
  "is2Xl": false,
  "isLg": false,
  "isMd": false,
  "isSm": false,
  "isXl": false,
  "isXs": false,
}
`;
